add custom success page to contact form

--- a/layouts/shortcodes/netlify-form.html
+++ b/layouts/shortcodes/netlify-form.html
@@ -1,4 +1,4 @@
-<form name="{{ .Get "name" | default (.Get 0) }}" method="POST" netlify-honeypot="pooh" netlify>
+<form name="{{ .Get "name" | default (.Get 0) }}" {{ with .Get "action" }}action="{{ . }}"{{ end }} method="POST" netlify-honeypot="pooh" netlify>
 <label class="hidden">Don't fill this out if you're human<input name="pooh"/></label>
 {{ .Inner }}
 <p></p>
