--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -26,22 +26,55 @@
 {{ $paginator := .Paginator }}
 
 <!-- Number of links either side of the current page -->
-{{ $adjacent_links := 2 }}
+{{ $adjacent_links := 1 }}
+
 
 <!-- $max_links = ($adjacent_links * 2) + 1 -->
 {{ $max_links := (add (mul $adjacent_links 2) 1) }}
 
-<!-- $lower_limit = $adjacent_links + 1 -->
-{{ $lower_limit := (add $adjacent_links 1) }}
+<!-- Pages to print -->
+{{ $lower_limit := 1 }}
+{{ $upper_limit := $paginator.TotalPages }}
+{{ $include_lower_ellipsis := false }}
+{{ $include_upper_ellipsis := false }}
 
-<!-- $upper_limit = $paginator.TotalPages - $adjacent_links -->
-{{ $upper_limit := (sub $paginator.TotalPages $adjacent_links) }}
+{{ if gt $paginator.TotalPages $max_links }}
 
-<!-- $first_middle_page = $paginator.PageNumber - $adjacent_links -->
-{{ $first_middle_page := sub $paginator.PageNumber $adjacent_links }}
+    <!-- If we have more pages before the current page than we can print -->
+    {{ if ge $paginator.PageNumber $adjacent_links }}
 
-<!-- $last_middle_page = $paginator.PageNumber + $adjacent_links -->
-{{ $last_middle_page := add $paginator.PageNumber $adjacent_links }}
+        {{ $lower_limit = sub $paginator.PageNumber $adjacent_links }}
+
+        <!-- Show more pages at the end of the range -->
+        {{ if lt (sub $paginator.TotalPages $lower_limit) $max_links }}
+            {{ $lower_limit = add 1 (sub $paginator.TotalPages $max_links) }}
+        {{ end }}
+
+        <!--Show ellipsis if at least 2 pages are hidden-->
+        {{ if gt (sub $lower_limit 1) 1 }}
+            {{ $include_lower_ellipsis = true }}
+        {{ end }}
+
+    {{ end }}
+
+    <!-- If we have more pages after the current page than we can print -->
+    {{ if gt (sub $paginator.TotalPages $paginator.PageNumber) $adjacent_links }}
+
+        {{ $upper_limit = add $paginator.PageNumber $adjacent_links }}
+
+        <!-- Show more pages at the beginning of the range -->
+        {{ if le $upper_limit $max_links }}
+            {{ $upper_limit = $max_links }}
+        {{ end }}
+
+        <!--Show ellipsis if at least 2 pages are hidden-->
+        {{ if gt (sub $paginator.TotalPages $upper_limit) 1 }}
+            {{ $include_upper_ellipsis = true }}
+        {{ end }}
+
+    {{ end }}
+
+{{ end }}
 
 
 <!-- If there's more than one page -->
@@ -58,104 +91,22 @@
         {{ end }}
 
         <ul class="pagination-list">
-        {{ $show_number := false }}
-        {{ $add_ellipses_before := false }}
-        {{ $add_ellipses_after := false }}
 
-        <!-- Page numbers -->
         {{ range $paginator.Pagers }}
 
-            {{ $show_number = false }}
-            {{ $add_ellipses_before = false }}
-            {{ $add_ellipses_after = false }}
+            <!-- Include first, last, and middle pages -->
+            {{ if or (or (eq .PageNumber 1) (eq .PageNumber $paginator.TotalPages)) (and (ge .PageNumber $lower_limit) (le .PageNumber $upper_limit)) }}
 
-            <!-- Include first page -->
-            {{ if eq .PageNumber $paginator.First.PageNumber }}
-
-                {{ $show_number = true }}
-
-            <!-- Include last page -->
-            {{ else if eq .PageNumber $paginator.Last.PageNumber }}
-
-                {{ $show_number = true }}
-
-            <!-- Simple page numbers -->
-            {{ else if le $paginator.TotalPages $max_links }}
-
-                {{ $show_number = true }}
-
-            <!-- Advanced page numbers -->
-            {{ else }}
-
-                <!-- Lower limit pages -->
-                <!-- If the user is on a page which is in the lower limit -->
-                {{ if le $paginator.PageNumber $lower_limit }}
-
-                    <!-- If the current loop page is less than max_links. -->
-                    {{ if le .PageNumber $max_links }}
-
-                        {{ $show_number = true }}
-
-                        <!-- Include ellipses if there's a gap between the lower limit and the last page -->
-                        {{ if eq .PageNumber $max_links }}
-                            {{ $add_ellipses_after = true }}
-                        {{ end }}
-
-                    {{ end }}
-
-                <!-- Upper limit pages -->
-                <!-- If the user is on a page which is in the upper limit -->
-                {{ else if ge $paginator.PageNumber $upper_limit }}
-
-                    <!-- If the current loop page is greater than total pages minus $max_links -->
-                    {{ if gt .PageNumber (sub $paginator.TotalPages $max_links) }}
-
-                        {{ $show_number = true }}
-
-                        <!-- Include ellipses if there's a gap between the upper limit and the first page -->
-                        {{ if eq .PageNumber (add (sub $paginator.TotalPages $max_links) 1) }}
-                            {{ $add_ellipses_before = true }}
-                        {{ end }}
-
-                    {{ end }}
-
-
-                <!-- Middle pages -->
-                {{ else if and (ge .PageNumber $first_middle_page) (le .PageNumber $last_middle_page) }}
-
-                    {{ $show_number = true }}
-
-                    <!-- Include ellipses if there's a gap between the first page and the middle pages -->
-                    {{ if (and (eq .PageNumber $first_middle_page) (ne (sub $first_middle_page 1) $paginator.First.PageNumber)) }}
-                        {{ $add_ellipses_before = true }}
-                    {{ end }}
-
-                    <!-- Include ellipses if there's a gap between the last page and the middle pages -->
-                    {{ if (and (eq .PageNumber $last_middle_page) (ne (add $last_middle_page 1) $paginator.Last.PageNumber)) }}
-                        {{ $add_ellipses_after = true }}
-                    {{ end }}
-
-                {{ end }}
-
-            {{ end }}
-
-            <!-- Output page numbers -->
-            {{ if eq $show_number true }}
-
-                {{ if eq $add_ellipses_before true }}
-
-                    <!-- TODO if the ellipses is only replacing a single page, include that page instead -->
+                <!-- If we're on the last page and we're including an ellipsis -->
+                {{ if and (eq .PageNumber $paginator.TotalPages) (eq $include_upper_ellipsis true) }}
                     <li><span class="pagination-ellipsis">&hellip;</span></li>
-
                 {{ end }}
 
                 <li><a href="{{ .URL }}" class="pagination-link{{ if eq $paginator.PageNumber .PageNumber }} is-current{{ end }}">{{ .PageNumber }}</a></li>
 
-                {{ if eq $add_ellipses_after true }}
-
-                    <!-- TODO if the ellipses is only replacing a single page, include that page instead -->
+                <!-- If we're on the first page and we're including an ellipsis -->
+                {{ if and (eq .PageNumber $paginator.First.PageNumber) (eq $include_lower_ellipsis true) }}
                     <li><span class="pagination-ellipsis">&hellip;</span></li>
-
                 {{ end }}
 
             {{ end }}
@@ -165,5 +116,4 @@
         </ul>
     </nav>
 </section>
-
 {{ end }}
