add hugo pagination and syntax highlighting

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,9 @@
     {{ end -}}
 
     <!-- Styles -->
-    {{ $style := resources.Get "style.css" | minify }}
+    {{ $friendly := resources.Get "friendly.css" }}
+    {{ $style := resources.Get "style.css" }}
+    {{ $styles := slice $friendly $style | resources.Concat "styles.css" | minify | fingerprint }}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" integrity="sha256-2pUeJf+y0ltRPSbKOeJh09ipQFYxUdct5nTY6GAXswA=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}" />
+    <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" />
 </head>
