--- a/layouts/partials/licenses/cc-by-4.0.html
+++ b/layouts/partials/licenses/cc-by-4.0.html
@@ -1,1 +1,3 @@
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Attribution License 4.0" src="/icons/cc-by-4.0.png" /></a>
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+    <img title="CC-BY 4.0 Licensed" alt="Creative Commons Attribution License 4.0" src="/icons/cc-by-4.0.png" />
+</a>
