--- a/layouts/partials/licenses/cc-by-sa-4.0.html
+++ b/layouts/partials/licenses/cc-by-sa-4.0.html
@@ -1,1 +1,3 @@
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Attribution Share Alike License 4.0" src="icons/cc-by-sa-4.0.png" /></a>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+    <img title="CC-BY-SA 4.0 Licensed" alt="Creative Commons Attribution Share Alike License 4.0" src="icons/cc-by-sa-4.0.png" />
+</a>
