--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -41,10 +41,5 @@
 {{ partial "comments.html" . }}
 {{ end }}
 {{ define "credits" }}
-<details>
-  <summary class="credits">Credits</summary>
-  <span>Facebook and Twitter icons by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> is <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a> licensed</span>
-  <br>
-  <span>Diaspora icon by <a href="https://www.iconfinder.com/icons/246636/diaspora_icon" title="Zohanimasi">Zohanimasi</a> is <a href="http://creativecommons.org/licenses/by/2.5/" title="Creative Commons BY 2.5">CC BY 2.5</a> licensed</span>
-</details>
+  <div class="section is-italic">Facebook and Twitter icons by <a class="has-text-light has-text-underlined" href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> provided under <a class="has-text-light has-text-underlined" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a> license</div>
 {{ end }}
