--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,8 @@
-{{ define "site_header" }}
+{{ define "header" }}
 <!-- the title of the index page should be an h1 element to meet accessibility standards-->
-<h1>{{ .Site.Title }}</h1>
+<header class="title">
+  <h1><a class="has-text-black-ter" href="/">{{ .Site.Title }}</a></h1>
+</header>
 {{ end }}
 {{ define "main" }}
   {{ $paginator := .Paginate (where .Pages "Type" "post") }}
