cleanup readme and 404

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 <article class="content has-text-centered">
-    Oops! We couldn't find that page. Try starting from the <a href="/">homepage</a>.
+    <section class="section">
+        Oops! We couldn't find that page. Try starting from the <a href="/">homepage</a>.
+    </section>
 </article>
 {{ end }}
