--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,34 @@ ul.paging-example {
     fill: white;
 }
 
+/* Loading spinner - https://loading.io/css/ */
+.lds-dual-ring {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+}
+
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 46px;
+  height: 46px;
+  margin: 1px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  border-color: rgba(14, 30, 37, 0.54) transparent rgba(14, 30, 37, 0.54) transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* YouTube Shortcode */
 div.youtube {
     position: relative;
