--- a/layouts/apps/list.html
+++ b/layouts/apps/list.html
@@ -11,7 +11,7 @@
             <img src="{{ . }}">
         </figure>
       {{ end }}
-      <h2 class="title is-4">{{ .Title }}</h2>
+      <h2 class="title is-4 has-text-centered">{{ .Title }}</h2>
     </a>
   {{ end }}
 </div>
