--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,3 @@
-{{ define "body_class" }}tag-template{{ end }}
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
   {{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 10) }}
@@ -6,7 +5,7 @@
   <!-- Add title for first page of tags -->
   {{ if not $paginator.HasPrev }}
     {{ if eq .Data.Plural "tags" }}
-      <h2 class="tag-title">{{ .Title }}</h2>
+      <h1 class="title is-2">{{ .Title }}</h1>
     {{ end }}
   {{ end }}
 
