add return home button to the end of lists

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,13 @@
   {{ range $paginator.Pages }}
     {{ .Render "summary" }}
   {{ end }}
+
+  <!-- Add return to home on last page -->
+  {{ if not $paginator.HasNext }}
+    {{ partial "list-end.html" . }}
+  {{ end }}
+
   {{ partial "pagination.html" . }}
+
   {{ partial "tags.html" . }}
 {{ end }}
