--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,5 +12,11 @@
   {{ range $paginator.Pages  }}
     {{ .Render "summary"  }}
   {{ end  }}
+
+  <!-- Add return to home on last page -->
+  {{ if not $paginator.HasNext }}
+    {{ partial "list-end.html" . }}
+  {{ end }}
+
   {{ partial "pagination.html" .  }}
 {{ end }}
