--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.Language.Lang }}">
     {{ partial "head.html" . }}
     <body>
-        <section class="section">
+        <div class="section">
             <div class="container">
                 {{ block "header" . }}
                 <header class="title">
@@ -13,7 +13,7 @@
             <main class="container is-readable-column">
             {{ block "main" . }}{{ end }}
             </main>
-        </section>
+        </div>
         <footer class="footer has-background-dark">
             <div class="content has-text-centered has-text-light">
                 <a class="has-text-light" title="Subscribe to RSS" href="/index.xml">{{ partial "icons/rss.svg" }}Subscribe</a>
