enable netlify cms

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,5 +25,6 @@
                 <div>©{{ now.Format "2006" }} {{ .Site.Copyright }}</div>
             </div>
         </footer>
+        {{ block "end-scripts" . }}{{ end }}
     </body>
 </html>
