--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,3 +19,6 @@
 
   {{ partial "tags.html" . }}
 {{ end }}
+{{ define "end-scripts" }}
+<script src="/static/js/redirect-admin.js"></script>
+{{ end }}
