--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,4 +1,4 @@
-<h2 id="tags" class="title is-2">Tags</h2>
+<h2 id="tags" class="title">Tags</h2>
 <div class="tags">
     {{ $tags := $.Site.Taxonomies.tags.Alphabetical }}
     {{ range $tags }}
