--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,5 +21,5 @@
 {{ end }}
 {{ define "end-scripts" }}
   {{ $admin_redirect := resources.Get "admin-redirect.js" | minify }}
-  <script src="{{ $admin_redirect.RelPermalink }}" integrity="{{ $admin_redirect.Data.Integrity }}" ></script>
+  <script src="{{ $admin_redirect.RelPermalink }}"></script>
 {{ end }}
