make social links greyscale

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,10 @@ ul.paging-example {
     fill: white;
 }
 
+.greyscale {
+    filter: grayscale(100%);
+}
+
 /* Loading spinner - https://loading.io/css/ */
 .lds-dual-ring {
   display: inline-block;
