--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -8,10 +8,10 @@
     {{ partial "post-meta.html" .}}
   </header>
   {{ .Content }}
-  <footer class="level">
+  <footer>
     <!-- Tags -->
     {{ with .Params.tags -}}
-    <div class="tags level-left">
+    <div class="tags">
     {{ range . }}
     {{- $name := . -}}
       {{- with $.Site.GetPage "taxonomy" (printf "tags/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "tags/%s" ($name | urlize))) -}}
@@ -19,12 +19,10 @@
       {{ end -}}
     {{ end }}
     </div>
-    {{ else }}
-      <div class="level-left"></div>
     {{- end }}
 
     <!-- Share Links -->
-    <div class="level-right">
+    <div class="level-right greyscale">
       <a class="share-link" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/facebook.svg" }}</a>
       <a class="share-link" title="Share on Reddit" href="https://reddit.com/submit?url={{ .Permalink }}&title={{ .Title }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/reddit.svg" }}</a>
       <a class="share-link" title="Share on Twitter" href="https://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/twitter.svg" }}</a>
