add DuckDuckGo search field

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <article class="content has-text-centered">
     <section class="section">
-        Oops! We couldn't find that page. Try starting from the <a href="/">homepage</a>.
+        Oops! I couldn't find that page. Try starting from the <a href="/">homepage</a>.
     </section>
 </article>
 {{ end }}
