--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,15 @@ ul.paging-example {
     display: none;
 }
 
+/* Search */
+.search {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 40px;
+}
+
 /* Footer */
 .is-spaced-footer-link {
     margin-left: 3rem;
