increase button constrast and add iframe title for accessibility

--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -85,7 +85,7 @@
         {{ end }}
 
         {{ if $paginator.HasNext }}
-            <a class="pagination-next button is-info" href="{{ $paginator.Next.URL }}">Next page</a>
+            <a class="pagination-next button is-link" href="{{ $paginator.Next.URL }}">Next page</a>
         {{ end }}
 
         <ul class="pagination-list">
