--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,8 @@
         </div>
         <footer class="footer has-background-dark">
             <div class="content has-text-centered has-text-light">
-                <a class="has-text-light" title="Subscribe to RSS" href="/index.xml">{{ partial "icons/rss.svg" }}Subscribe</a>
+                <a class="has-text-light" href="/">Home</a>
+                <a class="is-spaced-footer-link has-text-light" title="Subscribe to RSS" href="/index.xml">{{ partial "icons/rss.svg" }}Subscribe</a>
                 {{ range .Site.Menus.main }}
                     <a class="is-spaced-footer-link has-text-light" href="{{ .URL | relLangURL | safeURL }}">{{ .Name }}</a>
                 {{ end }}
