Add disabled pagination links
On mobile it looks weird when the Previous button is missing entirely on
the first page (and the Next page button, on the last page).

--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -82,10 +82,14 @@
 
         {{ if $paginator.HasPrev }}
             <a class="pagination-previous" href="{{ $paginator.Prev.URL }}">Previous</a>
+        {{ else }}
+            <a class="pagination-previous" title="On first page" disabled>Previous</a>
         {{ end }}
 
         {{ if $paginator.HasNext }}
             <a class="pagination-next button is-link" href="{{ $paginator.Next.URL }}">Next page</a>
+        {{ else }}
+            <a class="pagination-next" title="On last page" disabled>Next page</a>
         {{ end }}
 
         <ul class="pagination-list">
