--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "header" }}
 <!-- the title of the index page should be an h1 element to meet accessibility standards-->
 <header class="title">
-  <h1><a class="has-text-black-ter" href="/">{{ .Site.Title }}</a></h1>
+  <h1><a class="is-plain" href="/">{{ .Site.Title }}</a></h1>
 </header>
 {{ end }}
 {{ define "main" }}
