--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -32,5 +32,5 @@
 {{ partial "comments.html" . }}
 {{ end }}
 {{ define "credits" }}
-  <div class="section is-italic">Facebook and Twitter icons by <a class="has-text-light has-text-underlined" href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> provided under <a class="has-text-light has-text-underlined" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a> license</div>
+  <div class="section is-italic">Facebook and Twitter icons by <a class="is-plain has-text-underlined" href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> provided under <a class="is-plain has-text-underlined" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a> license</div>
 {{ end }}
