--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
             <div class="container">
                 {{ block "header" . }}
                 <header class="title">
-                    <h2><a class="has-text-black-ter" href="/">{{ .Site.Title }}</a></h2>
+                    <h2><a class="is-plain" href="/">{{ .Site.Title }}</a></h2>
                 </header>
                 {{ end }}
             </div>
@@ -14,12 +14,12 @@
             {{ block "main" . }}{{ end }}
             </main>
         </div>
-        <footer class="footer has-background-dark">
-            <div class="content has-text-centered has-text-light">
-                <a class="has-text-light" href="/">Home</a>
-                <a class="is-spaced-footer-link has-text-light" title="Subscribe to RSS" href="/index.xml">{{ partial "icons/rss.svg" }}Subscribe</a>
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <a class="is-plain" href="/">Home</a>
+                <a class="is-plain is-spaced-footer-link rss-button" title="Subscribe to RSS" href="/index.xml">{{ partial "icons/rss.svg" }}Subscribe</a>
                 {{ range .Site.Menus.main }}
-                    <a class="is-spaced-footer-link has-text-light" href="{{ .URL | relLangURL | safeURL }}">{{ .Name }}</a>
+                    <a class="is-plain is-spaced-footer-link" href="{{ .URL | relLangURL | safeURL }}">{{ .Name }}</a>
                 {{ end }}
                 {{ block "credits" . }}{{ end }}
                 <p>
