--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,4 +1,4 @@
 <div class="has-text-centered">
     <hr>
-    <i>Comments are not available yet. If you'd like to leave a message feel free to reach out to me through the <a href="/contact">Contact</a> page. - Oliver</i>
+    <i>Comments are not available yet but feel free to reach out to me through the <a href="/contact">Contact</a> page. - Oliver</i>
 </div>
