--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,6 +1,8 @@
-<iframe title="DuckDuckGo search box"
-        class="search greyscale"
-        src="https://duckduckgo.com/search.html?site={{ $.Site.BaseURL }}&prefill=Search site with DuckDuckGo"
-        frameborder="0"
-        sandbox="allow-forms allow-scripts allow-top-navigation">
-</iframe>
+<div>
+    <iframe title="DuckDuckGo search box"
+            class="search greyscale"
+            src="https://duckduckgo.com/search.html?site={{ $.Site.BaseURL }}&prefill=Search site with DuckDuckGo"
+            frameborder="0"
+            sandbox="allow-forms allow-scripts allow-top-navigation">
+    </iframe>
+</div>
