Make whole summary a link
This is to make them easier to click. One side effect is however that
post summaries need to be written in front matter. Using: <!--more--> no
longer looks good. (It inserts additional <p> elements and makes summary
links have link colours, rather than look like plain text.)

--- a/layouts/posts/summary.html
+++ b/layouts/posts/summary.html
@@ -5,10 +5,12 @@
 	<a href="{{ $url }}"><img alt="{{ $title }}" src="{{ . }}"/></a>
 	{{ end }}
 	<div>
-		<header>
-			<h2 class="title"><a class="is-plain" href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
-		</header>
-		{{ partial "post-meta.html" .}}
-		<a class="is-plain" href="{{ .Permalink }}">{{ .Summary }}</a>
+		<a href="{{ .RelPermalink }}">
+			<header>
+				<h2 class="title">{{ .Title }}</h2>
+			</header>
+			{{ partial "post-meta.html" .}}
+			<p class="is-plain">{{ .Summary }}</p>
+		</a>
 	</div>
 </article>
