--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -22,10 +22,10 @@
     {{- end }}
 
     <!-- Share Links -->
-    <div class="level-right greyscale">
-      <a class="share-link" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/facebook.svg" }}</a>
-      <a class="share-link" title="Share on Reddit" href="https://reddit.com/submit?url={{ .Permalink }}&title={{ .Title }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/reddit.svg" }}</a>
-      <a class="share-link" title="Share on Twitter" href="https://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/twitter.svg" }}</a>
+    <div class="level-right">
+      <a class="share-link greyscale" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/facebook.svg" }}</a>
+      <a class="share-link greyscale" title="Share on Reddit" href="https://reddit.com/submit?url={{ .Permalink }}&title={{ .Title }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/reddit.svg" }}</a>
+      <a class="share-link greyscale" title="Share on Twitter" href="https://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">{{ partial "icons/twitter.svg" }}</a>
     </div>
   </footer>
 </article>
