--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html> <!-- HTML5 -->
 <html lang="{{ .Site.Language.Lang }}">
-    {{ partial "head.html" . }}
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        {{ if not .IsHome }}{{ template "_internal/schema.html" . }}{{ end }}
+        <title>
+            {{ block "title" . }}
+            {{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}
+            {{ end }}
+        </title>
+        {{ with .Site.Params.Description }}<meta name="description" content="{{ . }}">{{ end }}
+        {{ with .Site.Params.AppleTouchIcon }}<link rel="apple-touch-icon" href="{{ . }}">{{ end }}
+        {{ block "meta" . }}{{ end }}
+
+        {{ $siteTitle := .Site.Title }}
+        {{ with .OutputFormats.Get "RSS" }}
+        <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $siteTitle }}" />
+        {{ end -}}
+
+        <!-- Styles -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" integrity="sha384-n+0XPuNbU1PaXosJ2ARqt1UgnvuTZqsh+D9uoJRHCanp/VOTJXtZaWOzCzwMZF0n" crossorigin="anonymous" />
+        {{ $friendly := resources.Get "friendly.css" }}
+        {{ $style := resources.Get "style.css" }}
+        {{ $darkmode := resources.Get "darkmode.css" }}
+        {{ $styles := slice $friendly $style $darkmode | resources.Concat "styles.css" | minify }}
+        <link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
+    </head>
     <body>
         <div class="section">
             <div class="container">
