--- a/assets/style.css
+++ b/assets/style.css
@@ -141,3 +141,13 @@ div.youtube iframe {
     height: 100%;
     border:0;
 }
+
+/* Nested Lists */
+.content li ol {
+    margin-top: 0;
+}
+
+.content li ul {
+    margin-top: 0;
+}
+
