Move login to root

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,3 +21,7 @@
 
   {{ partial "search.html" . }}
 {{ end }}
+{{ define "credits" }}
+<script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<div data-netlify-identity-button></div>
+{{ end }}
