Adjust link accessibility, add logos

--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,18 @@
 a {
-  color: #337ab7;
+  color: #35579B;
   text-decoration: none;
+  padding: 4px;
 }
 a:hover {
-  color: #23527c;
+  color: #35579B;
   text-decoration: underline;
 }
 body {
   background-color: #fafafa;
   color: #161718;
   font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-  line-height: 1.5rem;
+  line-height: 1.75rem;
+  font-size: 1.2rem;
 }
 .center {
   text-align: center;
@@ -57,5 +59,9 @@ textarea {
 }
 @media (prefers-color-scheme: dark) {
   color: #fafafa;
-  background-color: #337ab7;
+  background-color: #161718;
+
+  a {
+    color: #4B89BF;
+  }
 }
