--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,9 @@ a:hover {
 a, a:hover, a:visited {
   color: #360BA2;
 }
+.align-right {
+  text-align: right;
+}
 body {
   background-color: #fafafa;
   color: #161718;
@@ -31,6 +34,9 @@ button:hover {
 .center {
   text-align: center;
 }
+code {
+  display: inline-block;
+}
 .hidden {
   display: none;
 }
@@ -41,6 +47,10 @@ h1 {
   font-size: 5rem;
   line-height: 5rem;
   margin: 1rem;
+}
+.home {
+  padding: 4px;
+  position: absolute;
 }
 input, textarea {
   max-width: 100%;
@@ -62,11 +72,29 @@ main {
   max-width: 700px;
   margin: 0 auto;
 }
+.margin-2 {
+  margin: 2rem;
+}
+.margin-right-1 {
+  margin-right: 1rem;
+}
+.padding-6 {
+  padding: 6rem;
+}
 section {
   padding-bottom: 1rem;
 }
 textarea {
   height: 6rem;
+}
+.unstyled-list {
+  padding: 0;
+  list-style-type: none;
+}
+.youtube {
+  display: block;
+  height: 21rem;
+  width: 100%;
 }
 @media (prefers-color-scheme: dark) {
   a, a:hover, a:visited {
